added statistics chart

--- a/TodoWebApp.csproj
+++ b/TodoWebApp.csproj
@@ -45,6 +45,9 @@
     <Content Update="wwwroot\images\background_opacity.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\images\charticon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\images\checkFader.gif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
